MDL-32479 - RTL Theme fixes for Moodle 2 (theme/base) Right align item's content (when viewing a Glossary activity in RTL mode)
Conflicts:

	mod/glossary/styles.css

--- a/mod/glossary/styles.css
+++ b/mod/glossary/styles.css
@@ -32,3 +32,4 @@
 #page-mod-glossary-showentry #page-content {min-width:600px;}
 
 #page-mod-glossary-print .mod-glossary-entrylist .mod-glossary-entry { vertical-align: top; }
+.path-mod-glossary.dir-rtl .glossarypost {text-align: right;}
